# gc_engine-

./: .main.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  benchmark.c  bootlib.h  cmake_install.cmake  cycletest.c  gc_engine_asan  main.c  main2.c  munit.h  run_benchmarks.py  test_compile  visualizer.c
mark_and_sweep/: msneknew.h  sneknew.c  sneknew.h  snekobject.c  snekobject.h  vm.c  vm.h
objects/: snekobject.c  snekobject.h
reference_counting/: .refcount.c.swp  refcount.c  refcount.h  sneknew.c  sneknew.h  snekobject.c  snekobject.h
stack/: stack.c  stack.h
virtual_machine/: vm.c  vm.h
